# bl602-re

./: .gitignore  CMakeLists.txt  README.adoc
BlDevCube/: core.bflb_efuse_tool.pyc.py  core.bflb_img_tool.pyc.py  core.bflb_key_tool.pyc.py  core.bflb_mfg_tool.pyc.py  core.bflb_partition_tool.pyc.py  core.bflb_reg_tool.pyc.py  core.bflb_sec_aes_tool.pyc.py  core.bflb_simple_flasher.pyc.py  core.pyc.py  fdt.header.pyc.py  fdt.items.pyc.py  fdt.misc.pyc.py  fdt.pyc.py  lib.bflb_aes.pyc.py  lib.bflb_com_if_jlink.pyc.py  lib.bflb_com_if_openocd.pyc.py  lib.bflb_com_if_uart.pyc.py  lib.bflb_configobj.pyc.py  lib.bflb_ecdh.pyc.py  lib.bflb_eflash_loader.pyc.py  lib.bflb_efuse_boothd_create.pyc.py  lib.bflb_flash_select.pyc.py  lib.bflb_img_create.pyc.py  lib.bflb_img_loader.pyc.py  lib.bflb_proto.pyc.py  lib.bflb_pt_creater.pyc.py  lib.bflb_ro_params_device_tree.pyc.py  lib.bflb_ro_params_gen.pyc.py  lib.bflb_toml.pyc.py  lib.bflb_utils.pyc.py  lib.bflb_version.pyc.py  lib.bl602.bootheader_cfg_keys.pyc.py  lib.bl602.efuse_cfg_keys.pyc.py  lib.bl602.efuse_create_do.pyc.py  lib.bl602.efuse_data_create.pyc.py  lib.bl602.flash_select_do.pyc.py  lib.bl602.img_create_do.pyc.py  lib.bl602.jlink_load_cfg.pyc.py  lib.bl602.openocd_load_cfg.pyc.py  lib.bl602.partition_cfg_do.pyc.py  (+22 more)
alios/: mac_pl.h  reg_intc.h
blobs/: agc_config.c  bl602_demo_at.ghidra.h  bl602_demo_wifi.elf.inline.txt  bl602_demo_wifi.ghidra.c  bl602_demo_wifi.ghidra.h  bl602_demo_wifi.map  bz_phy.c  reg_riu.h  sdk_app_ble_sync.elf.inline.txt  sdk_app_ble_sync.ghidra.c  sdk_app_ble_sync.ghidra.h  sdk_app_ble_sync.map
cmake/: add_module.cmake  c_extension.cmake
dwarf/: libatcmd.h  libbl602_wifi.h  libblecontroller.h
images/: README.md
libatcmd/: at_command.o.s  at_common.o.s  at_config.o.s  at_extend.o.s  at_gpio.o.s  at_parameter.o.s  at_queue.o.s  at_server.o.s  at_socket.o.s  at_status.o.s  at_upgrade.o.s  at_wlan.o.s  bl_socket.o.s  functions.o.s
libbl602_wifi/: agcmem_bl602.o.s  apm.o.s  apm_task.o.s  arch_main.o.s  bam.o.s  bam_task.o.s  bl.o.s  bl602_calib_data.o.s  bl602_rf_private.o.s  bl_aes_cmac.o.s  bl_ap_init.o.s  bl_ap_mgmt.o.s  bl_ap_mgmt_internal.o.s  bl_buf.o.s  bl_connection_mgmt.o.s  bl_crypt.o.s  bl_crypto_mbedtls.o.s  bl_md5_wrapper.o.s  bl_passphrase.o.s  bl_pmk_mgmt.o.s  bl_pmk_mgmt_internal.o.s  bl_sae.o.s  bl_sha1_wrapper.o.s  bl_sha256_crypto.o.s  bl_sta_mgmt.o.s  bl_sta_mgmt_internal.o.s  bl_sta_mgmt_others.o.s  bl_supplicant.o.s  cfg_api.o.s  cfg_task.o.s  chan.o.s  co_dlist.o.s  co_list.o.s  co_math.o.s  co_pool.o.s  co_ring.o.s  dbg.o.s  dbg_print.o.s  dbg_profiling.o.s  dbg_task.o.s  (+72 more)
libblecontroller/: arch_main.o.s  assert.o.s  co_list.o.s  co_utils.o.s  dbg.o.s  dbg_mwsgen.o.s  dbg_swdiag.o.s  dbg_task.o.s  ea.o.s  ecc_p256.o.s  em_buf.o.s  h4tl.o.s  hci.o.s  hci_fc.o.s  hci_msg.o.s  hci_onchip.o.s  hci_tl.o.s  hci_util.o.s  ke.o.s  ke_event.o.s  ke_mem.o.s  ke_msg.o.s  ke_queue.o.s  ke_task.o.s  ke_timer.o.s  llc.o.s  llc_ch_asses.o.s  llc_hci.o.s  llc_llcp.o.s  llc_task.o.s  llc_util.o.s  lld.o.s  lld_evt.o.s  lld_pdu.o.s  lld_sleep.o.s  lld_util.o.s  lld_wlcoex.o.s  llm.o.s  llm_hci.o.s  llm_task.o.s  (+6 more)
script/: README.md  bfnp.ksy  extract_funcs.sh  funcdiff.py  getfuncs.py  headerdiff.py  inline_annotate.py  leak_scan.py  (+4 more)
src/bl602_wifi/: CMakeLists.txt  bl602_rf_private.h  hal_desc.h  phy.h  phy_adapt.c  phy_adapt.h  phy_bl602.c  phy_bl602.h  phy_hal.c  phy_hal.h  phy_helper.c  phy_tcal.c  phy_tcal.h  phy_trpc.c  phy_trpc.h  phyif_utils.c  rf.c  rf.h  rfc_bl602.c  rfc_bl602.h  test.ipynb  utils.h
src/bl602_wifi/arch/rv32i/: arch_main.c
src/bl602_wifi/driver/intc/: intc.c
src/bl602_wifi/driver/ipc/: ipc_emb.c  ipc_shared.c
src/bl602_wifi/driver/phy/phy_rf/: bl602_rf_calib_data.c  bl602_rf_private.c  macro.h  phy_adapt.c  phy_bl602.c  phy_hal.c  phy_helper.c  phy_tcal.c  phy_trpc.c  rf.c  rf_private_save.h  rfc_bl602.c
src/bl602_wifi/driver/phyif/: phyif_utils.c
src/bl602_wifi/driver/sysctrl/: sysctrl.c
src/bl602_wifi/hal/: hal_dma.c
src/bl602_wifi/ip/lmac/bl/: bl.c
src/bl602_wifi/ip/lmac/chan/: chan.c
src/bl602_wifi/ip/lmac/mm/: mm.c  mm_bcn.c  mm_task.c  mm_timer.c
src/bl602_wifi/ip/lmac/ps/: ps.c
src/bl602_wifi/ip/lmac/rx/: rx_swdesc.c
src/bl602_wifi/ip/lmac/rx/rxl/: rxl_cntrl.c  rxl_hwdesc.c
src/bl602_wifi/ip/lmac/scan/: scan.c  scan_shared.c  scan_task.c
src/bl602_wifi/ip/lmac/sta/: sta_mgmt.c
src/bl602_wifi/ip/lmac/td/: td.c
src/bl602_wifi/ip/lmac/tpc/: tpc.c
src/bl602_wifi/ip/lmac/tx/txl/: txl_buffer.c  txl_buffer_shared.c  txl_cntrl.c  txl_frame.c  txl_frame_shared.c  txl_hwdesc.c
src/bl602_wifi/ip/lmac/vif/: vif_mgmt.c
src/bl602_wifi/modules/common/: co_dlist.c  co_list.c  co_math.c  co_pool.c  notifier.c
src/bl602_wifi/modules/dbg/: dbg.c  dbg_print.c  dbg_task.c
src/bl602_wifi/modules/ke/: ke_env.c  ke_event.c  ke_mem.c  ke_msg.c  ke_queue.c  ke_task.c  ke_timer.c
src/bl602_wifi/modules/mac/: mac.c  mac_ie.c
(+696 files in other folders)
